--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-load": "^1.1.15",
-    "body-parser": "^1.15.0",
-    "method-override": "^2.3.5"
+    "method-override": "^2.3.5",
+    "mongodb": "^2.1.18",
+    "mongoose": "^4.4.17"
   }
 }
