--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-load": "^1.1.15",
+    "express-session": "^1.13.0",
     "method-override": "^2.3.5",
     "mongodb": "^2.1.18",
-    "mongoose": "^4.4.17"
+    "mongoose": "^4.4.17",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0"
   }
 }
