--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.5",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.17",
+    "mongoose-findorcreate": "^0.1.2",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0"
   }
