--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
     "bootstrap": "^3.3.6"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.6"
   }
 }
