--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-ng-annotate": "^2.0.2",
+    "grunt-usemin": "^3.1.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
