--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,11 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.5",
-    "angular-route": "1.5.5",
-    "bootstrap": "3.3.6"
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "angular-mocks": "1.5.6"
+    "angular-mocks": "^1.5.5"
   }
 }
