--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.5",
-    "angular-route": "^1.5.5",
+    "angular": "1.5.5",
+    "angular-route": "1.5.5",
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
